# authmail

./: Dockerfile  README.md  pyproject.toml
src/authmail/: main.py  requirements.txt
src/authmail/api/: ApiEndpoint.py  Endpoint.py  SourceEndpoint.py  __init__.py
src/authmail/behavior/: IChallengeHandler.py  IMailHandler.py  IResponseGenerator.py  __init__.py
src/authmail/config/: .gitignore  __init__.py  behavior.py.template  config.json.template  requirements.txt.template
src/authmail/config/implementation/: MemoryChallengeHandler.py  PyAcctMailHandler.py  RandomIntResponseGenerator.py  UnauthenticatedMailHandler.py  __init__.py
src/authmail/model/: Challenge.py  __init__.py  exceptions.py
src/authmail/schema/: ChallengeDto.py  EmailDto.py  MessageDto.py  ResponseDto.py  __init__.py
